--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div id="main">
       <div id="nav">
         <div id="logo">
-          <div id="logo_image"></div>
+          <div id="logo_image">
+            <img src="./images/handmade.webp" alt="">
+          </div>
           <div id="company-brand"><h4>Shop Jacket</h4></div>
         </div>
 
